--- a/SupplementalExperimentalProcedures.tex
+++ b/SupplementalExperimentalProcedures.tex
@@ -16,14 +16,14 @@ The [\emph{pUBQ10::H2B-RFP / pUBQ10::YFP-PIP1;4 / pGATA23::nls-GUS-GFP}] reporte
 The \emph{pUBQ10::H2B-RFP }cassette was obtained by Gateway-mediated cloning of a stop-less Histone H2B (AT5G22880) cDNA cassette in a \emph{pUBQ10::\emph{Gateway-cassette}:RFP }destination vector \cite{Grefen:2010ho}.
 
 \subsubsection*{Growth Conditions}
-Before imaging plants were grown vertically on 0.5X MS plates. These plates were prepared as follow: 2.66 g Murashige and Skoog medium (M0222.0050, LOT no. P08381.01, Duchefa, Haarlem, Netherlands), 0.97 g MES (2-(N-morpholino)ethanesulfonic acid buffer, M3671-50G, LOT no. 120M5433, Sigma-Aldrich) and 10 g Saccharose (4621.1, LOT no. 330160546, Carl Roth, Karlsruhe, Germany) were diluted in 1 L of sterile de-ionized water. The pH was adjusted to 5.8 using KOH. 15 g Phytagel were added to the bottle before autoclaving. Plates were poured once autoclaving was done. The seeds were surface sterilized by a (10 \% Sodiumhypochloride, 0.1 \% TRIS, in water) solution in a microtube for 10 min (shaker) and then rinsed five times with sterile water. Single seeds were sowed side by side on 0.5X MS plates with at least 1 cm space in between to facilitate sample preparation. Plates were grown for 5 to 7 days under long day conditions (16h/8h day/night cycle) with 120-140 $\nicefrac{\mu \text{mol}}{sm^2}$ amount of light, at 22$\degree $C.
+Before imaging plants were grown vertically on 0.5X MS plates. These plates were prepared as follow: 2.66 g Murashige and Skoog medium (M0222.0050, LOT no. P08381.01, Duchefa, Haarlem, Netherlands), 0.97 g MES (2-(N-morpholino)ethanesulfonic acid buffer, M3671-50G, LOT no. 120M5433, Sigma-Aldrich) and 10 g Saccharose (4621.1, LOT no. 330160546, Carl Roth, Karlsruhe, Germany) were diluted in 1 L of sterile de-ionized water. The pH was adjusted to 5.8 using KOH. 15 g Phytagel were added to the bottle before autoclaving. Plates were poured once autoclaving was done. The seeds were surface sterilized by a (10 \% Sodiumhypochloride, 0.1 \% TRIS, in water) solution in a microtube for 10 min (shaker) and then rinsed five times with sterile water. Single seeds were sowed side by side on 0.5X MS plates with at least 1 cm space in between to facilitate sample preparation. Plates were grown for 5 to 7 days under long day conditions (16h/8h day/night cycle) with 120-140 $\nicefrac{\mu \text{mol}}{m^2s}$ amount of light, at 22$\degree $C.
 
 \subsection*{Light Sheet Fluorescence Imaging}
 \subsubsection*{Sample Preparation}
 Capillaries (3 mm in diameter, 30 mm in height - Hilgenberg GmbH, Malsfeld, Germany) and carbon rods (0.28 mm in diameter, 30 mm in height, from Conrad Electronic GmbH \& Co KG, Wels, Germany) were cleaned in an ultrasound unit with 2\% Hellmanex (Hellma GmbH \& Co. KG, Muellheim, Germany) for 10 min, rinsed with water several times and then autoclaved. For sample preparation, the capillary was pushed 1.5 mm deep into the Phytagel to about 10 mm below the root tip, slid carefully over the root until the capillary reached the leaves and then lifted from the plate. The capillary was pushed into Phytagel to fill the capillary. A carbon rod was inserted from the top, behind the plant. The capillary was pushed into Phytagel in order to extrude the plant up to the region of interest (0 - 4 mm above the edge of the capillary). A drop of 2\% Agarose (no. 6351.2, Carl Roth, Karlsruhe, Germany) was placed above the region of interest in order to mount the root onto the Phytagel. Until imaging, the plants were kept in custom made chambers made by a 10 mm segment of the large end of a 200 $\mu$L pipet tip glued into the lid of a 15 mL tube.
 
 \subsubsection*{Imaging}
-The imaging of the lateral root development was performed using Light Sheet-based Fluorescence Microscopy (LSFM)~\citeMMM{Huisken2004}{keller_et_al_2008}{maizel_et_al_2011}. The plant was placed vertically in the 0.5X MS-filled chamber with the leaves in the air. It was inserted from above but held from below. During imaging the plant was illuminated by a flexible glass fiber (1/2 inch in diameter) that guided standard fluorescent light above the plant (120-140 $\mu$mol/m\textsuperscript{2}/s). A shutter on this illumination device is operated by the data acquisition software of the LSFM to turn the light off whenever a stack of fluorescence images is recorded, a standard time switch for the lamp generates the diurnal cycle. The microscope chamber was perfused continuously (0.55 ml/min) with fresh 0.5X MS medium and maintained at 23$\degree $C.
+The imaging of the lateral root development was performed using Light Sheet-based Fluorescence Microscopy (LSFM)~\citeMMM{Huisken2004}{keller_et_al_2008}{maizel_et_al_2011}. The plant was placed vertically in the 0.5X MS-filled chamber with the leaves in the air. It was inserted from above but held from below. During imaging the plant was illuminated by a flexible glass fiber (1/2 inch in diameter) that guided standard fluorescent light above the plant (120-140 $\nicefrac{\mu \text{mol}}{m^2s}$). A shutter on this illumination device is operated by the data acquisition software of the LSFM to turn the light off whenever a stack of fluorescence images is recorded, a standard time switch for the lamp generates the diurnal cycle. The microscope chamber was perfused continuously (0.55 ml/min) with fresh 0.5X MS medium and maintained at 23$\degree $C.
 \newline
 
 Two color channels were recorded, GFP and YFP were excited by a 488nm diode laser, fluorescence emission was filtered with a 525/50 band-pass filter. RFP was excited by a 561nm diode-pumped solid state (DPSS) laser, the fluorescence emission was filtered with a 607/70 band-pass filter. Image stacks consisting of 233 planes with an axial pitch of 0.645 $\mu$m were recorded every 5 min. A Carl Zeiss N-Achroplan 40x/0.75 W objective lens was used in the detection path and a Carl Zeiss EC Plan-Neofluar 5x/0.16 served in the illumination path. An Andor Clara camera (6.45 $\mu$m pixel pitch) was driven in a binning (2x2) mode. Camera exposure time was between 30 ms and 75 ms, the laser intensity was set between 0.02 mW and 0.6 mW depending on the respective fluorescence intensity. Each time point was acquired within 40 seconds and consists of 466 images (233 z-planes, 2 channels) resulting in 768 time points and up to 357888 images. The detailed individual settings of each recording can be found in Table~\ref{tab:metadata}. Movie S2 shows the time-dependent recordings of all datasets.
@@ -139,7 +139,7 @@ We developed an automatic algorithm~\cite[chapter 4]{FangerauDiss_2015} to class
 \captionsetup{labelformat=empty}
 \caption[]
 {
-Illustration: {\bf Division types in the lateral root.}
+Illustration: {\bf Division types according to their orientation relative to the main root.}
 }
 	\label{fig:divisionTypes}
 	\end{center}
