--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -18,7 +18,7 @@
 \captionof{figure}[]{
 Related to Figure 1.
 {\bf Time lapse recording of lateral root primordia development in five wild type datasets.}
-{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the image acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pUBQ10::YFP-PIP1;4}is shown. Due to a high dynamic range in gray values the brightness and contrast were adjusted non-linearly. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
+{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analyzed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the image acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pUBQ10::YFP-PIP1;4}is shown. Due to a high dynamic range in gray values the brightness and contrast were adjusted non-linearly. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
 }
 \label{fig:S1}
 %
@@ -32,7 +32,7 @@ Related to Figure 1.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 1.
-{\bf Cell lineages of the five wild type datasets.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees framed with orange rectangles are the ones located in the master cell file of a dataset. The visualization at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal).
+{\bf Cell lineages of the five wild type datasets.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees framed with orange rectangles are the ones located in the master cell file of a dataset. The visualization at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost column in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal).
 }
 \label{fig:S2}
 %
@@ -74,7 +74,7 @@ Related to Figure 4.
 \clearpage
 \captionof{figure}[]{
 Related to Figure 5.
-{\bf Division analysis of three wild type datasets.} {\bf Top:} Orientation of divisions relative to the cell geometry. For each dataset, single sections along the indicated cell files (overview upper left) are shown. The sections labeled A to F show different time points. Cell divisions are grouped into two classes according to the orientation of the newly generated cell wall. Either the cell wall is build along the long axis (blue) or the short axis (yellow) of the mother cell. {\bf Bottom:} Quantitative analysis of classified cell divisions for four division cycles.
+{\bf Division analysis of three wild type datasets.} {\bf Top:} Orientation of divisions relative to the cell geometry. For each dataset, single sections were created using the Fiji plugin \textit{BigDataViewer}~\cite{Pietzsch_et_al_2015} along the indicated cell files (overview upper left). The sections labeled A to F show different time points. Cell divisions are grouped into two classes according to the orientation of the newly generated cell wall. Either the cell wall is build along the long axis (blue) or the short axis (yellow) of the mother cell. {\bf Bottom:} Quantitative analysis of classified cell divisions for four division cycles.
 }
 \label{fig:S5}
 %
