--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -91,7 +91,7 @@ Growth & Cultivation Percival E-41L3 Plant Incubator & Cultivation Percival E-41
 & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433)\\
 & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546) & 1\% Saccharose (Roth, 4621.1, LOT\# 330160546)\\
 & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions\\
-& Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$\\
+& Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$\\
 & Light Cycle Day/Night = 16/8 & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night & Light = 16h Day, 8h Night\\
 & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C & Temperature = 22\degree C\\
 & Gravistimulation Prior To Recording = 8h 34min & Gravistimulation Prior To Recording = 14h 20min & Gravistimulation Prior To Recording = 15h 45min & Gravistimulation Prior To Recording = 8h 25min & Gravistimulation Prior To Recording = 7h 15min & Gravistimulation Prior To Recording = 12h 40min\\
@@ -104,7 +104,7 @@ Light sheet Imaging & Cultivation in microscope & Cultivation in microscope & Cu
 & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433) & 0.1\% MES (Sigma, M3671-50G, LOT\# 120M5433)\\
 & Perfusion Speed = 0.47ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min & Perfusion Speed = 0.55ml/min\\
 & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions & Growth Conditions\\
-& Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{sm^2}$\\
+& Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$ & Light Intensity = 120-140 $\nicefrac{\mu \, \text{mol}}{m^2s}$\\
 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8 & Light Cycle Day/Night = 16/8\\
 & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C & Temperature = 23\degree C\\
 & & & & & \ & \ \\
