--- a/bib/lit.bib
+++ b/bib/lit.bib
@@ -2564,6 +2564,19 @@
   timestamp = {2014.08.06}
 }
 
+@ARTICLE{Pietzsch_et_al_2015,
+  author = {Pietzsch, Tobias and Saalfeld, Stephan and Preibisch, Stephan and
+	Tomancak, Pavel},
+  title = {{BigDataViewer: visualization and processing for large image data
+	sets}},
+  journal = {Nat Methods},
+  year = {2015},
+  volume = {12},
+  pages = {481--483},
+  owner = {necrolyte},
+  timestamp = {2016.01.07}
+}
+
 @ARTICLE{piringer_kosara_hauser_2004,
   author = {Harald Piringer and Robert Kosara and Helwig Hauser},
   title = {Interactive Focus+Context Visualization with Linked 2D/3D Scatterplots},
