--- a/SupplementalExperimentalProcedures.tex
+++ b/SupplementalExperimentalProcedures.tex
@@ -63,7 +63,7 @@ Illustration: {\bf Spatial registration of datasets. Top:} Generation of front, 
 
 \subsubsection*{Spatial Registration}
 \noindent
-We compute the center of mass, the principal components and the convex hull of the set of all 3D cell positions at the last time point. Using this information, each dataset is then initially translated to the origin (see black node above) according to the center of mass and rotated by its associated principal components (see arrows above). Thus, we obtain a common Cartesian coordinate system resulting in three orthogonal views: \textit{front} (x-y, growth towards the observer), \textit{side} (x-z, along shoot/root axis), and \textit{radial} view (y-z, transversal cut perpendicular to shoot/root axis). Slight manual refinements were done using affine transformations such that the bases of the primordia are aligned with respect to the convex hulls (see above). The spatially registered datasets develop from almost the same base position and can be directly compared.
+We compute the center of mass, the principal components and the convex hull of the set of all 3D cell positions at the last time point. Using this information, each dataset is then initially translated to the origin (see black node above) according to the center of mass and rotated by its associated principal components (see arrows above). Thus, we obtain a common Cartesian coordinate system resulting in three orthogonal views: \textit{front} (y-x, growth towards the observer), \textit{side} (y-z, along shoot/root axis), and \textit{radial} view (x-z, transversal cut perpendicular to shoot/root axis). Slight manual refinements were done using affine transformations such that the bases of the primordia are aligned with respect to the convex hulls (see above). The spatially registered datasets develop from almost the same base position and can be directly compared.
 
 \subsubsection*{Temporal Registration}
 \noindent
